<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".activites.AboutUsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/about_this_apps"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/about_text"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/about_text"
                android:layout_marginTop="8dp"
                android:background="@color/gray1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/copy_right"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/copyright_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/copyright"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/copyright_text"
                android:layout_marginTop="8dp"
                android:background="@color/gray1" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/dev_bio"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/dev_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/Bio_Data"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/dev_text"
                android:layout_marginTop="8dp"
                android:background="@color/gray1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="Version:-"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="1.0"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_slab"
                android:text="all right reserved HP3 Software Solutions"
                android:textColor="@color/design_default_color_primary"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>